# ChangeLog for sys-apps/paludis
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/paludis/ChangeLog,v 1.233 2013/03/27 00:52:45 jdhore Exp $

  27 Mar 2013; Jeff Horelick <jdhore@gentoo.org> -paludis-0.82.0.ebuild,
  -paludis-1.0.0.ebuild:
  Version bump

*paludis-1.2.0 (27 Mar 2013)

  27 Mar 2013; Jeff Horelick <jdhore@gentoo.org> +paludis-1.2.0.ebuild:
  Version bump

  10 Mar 2013; Tiziano Müller <dev-zero@gentoo.org> paludis-1.0.0.ebuild:
  Depend on newer gtest which has USE=threads unconditionally and drop
  corresponding built_with_use check.

*paludis-1.0.0 (07 Feb 2013)

  07 Feb 2013; Jeff Horelick <jdhore@gentoo.org> +paludis-1.0.0.ebuild:
  Version bump

  06 Feb 2013; Jeff Horelick <jdhore@gentoo.org> metadata.xml:
  Mark myself as maintainer

  05 Feb 2013; Pacho Ramos <pacho@gentoo.org> -paludis-0.66.0.ebuild,
  -paludis-0.68.0.ebuild, -paludis-0.70.2.ebuild, -paludis-0.72.2.ebuild,
  -paludis-0.74.1.ebuild, -paludis-0.76.0.ebuild, -paludis-0.78.2.ebuild,
  -paludis-0.80.2.ebuild, metadata.xml:
  Cleanup due #260981 after talking with him

*paludis-0.82.0 (17 Nov 2012)

  17 Nov 2012; Tiziano Müller <dev-zero@gentoo.org> +paludis-0.82.0.ebuild,
  -paludis-0.80.1.ebuild:
  Version bump. Drop old.

*paludis-0.80.2 (23 Oct 2012)

  23 Oct 2012; Tiziano Müller <dev-zero@gentoo.org> +paludis-0.80.2.ebuild,
  -paludis-0.80.0.ebuild:
  Version bump. Drop old.

*paludis-0.80.1 (14 Oct 2012)

  14 Oct 2012; Tiziano Müller <dev-zero@gentoo.org> +paludis-0.80.1.ebuild:
  Version bump.

*paludis-0.80.0 (23 Sep 2012)

  23 Sep 2012; Tiziano Müller <dev-zero@gentoo.org> +paludis-0.80.0.ebuild,
  -paludis-0.72.0.ebuild, -paludis-0.78.1.ebuild:
  Version bump. Drop old.

*paludis-0.78.2 (13 Sep 2012)

  13 Sep 2012; Tiziano Müller <dev-zero@gentoo.org> +paludis-0.78.2.ebuild:
  Version bump.

*paludis-0.78.1 (13 Aug 2012)

  13 Aug 2012; Tiziano Müller <dev-zero@gentoo.org> +paludis-0.78.1.ebuild: