@@ -2,17 +2,19 @@
 Hash: SHA512
 
 DIST paludis-1.2.0.tar.bz2 1793681 SHA256 310c77163ea83c2ef43dba7c9a11daf894001b1a2d1f966612b22aa236de39f7 SHA512 53b1cb2dda4ae99659c2fd79a23c79659f9d1037a48dea01a3bcb6ebc3b2df0dba182f91eea2c5b1785e5bb463cf1846e5605064942aa91b2c95ff4e238e1c1f WHIRLPOOL 8114e9163edd830187f55df307c5b76c0f39f8eca2dd24f45b04b198f914d828703b045fb1efbde13a3d5b036782753a0fbf385587fa5cc61026aab9ae6e922b
+DIST paludis-1.4.0.tar.bz2 1792579 SHA256 161c02b4328acc5cade6e37c69176ac227a695b056a2942690f833c4b1f008b0 SHA512 9e9d8a00a20f79b6a7220ddc47c924114c07814ed6cc3e1c3ec7736b17378b6e8a3aa03adaf060dcb97aca01ea9b832b082336e1e67725ef9def68da3cfc3e15 WHIRLPOOL 4fd41cc3b15ebc7ea05b87408053e27fbdf1fb7ddc6a0a1ee882faeb281281a7206f9ee98603860e0bb2a6924af6b8c0954241e702262509757a9b140eeded6f
 EBUILD paludis-1.2.0.ebuild 5064 SHA256 0045021df32d2f5f7b6585337fa1059547d1c454aa362b186af9dc192a377b0a SHA512 5edff1135de15d330c9e59593031216c4a9dbc843503141058d549b4692309fdd7d33699abf81d67b6892a1226e2af8e030da8da173bcb1d75e59edeac560ff4 WHIRLPOOL c7e1b9beec4874aa31c11e5bd57709254020000d1e6383d1c44415c57468418fa1c0b5c49312c6eeddecafb07c807a62757d0e9c86952c4e5ff89fd1fa2e0771
-MISC ChangeLog 36648 SHA256 838af9155070861a067324b4f770bd3b7a8185c96484aa89796c061edb79ddec SHA512 e81ceadfac86b6c5a771c12441efbce36a44691129fa62d2152693b5476e6b96fc562bad73d1b3d98ac274eac9aaf1a75c25168676de2cbcdc769c14c76b3240 WHIRLPOOL d02a3383d25e9b6e96be037f8ee8611a3fec730b0b985415e203452a20da3e4be1142cebd2976d51b8a3b54d869cd4aa02c9388fd8e970648f14b6f5383df4b1
+EBUILD paludis-1.4.0.ebuild 5064 SHA256 4543eddab94c33bf8385fa704a89fa46083cba6f1a399d2754b01cd396d8a36f SHA512 db7e1813696317894c975147ae82d23902d94b1c93548ea76fe2f1d17c22d8eab05211024c436e64bf050aa3b1fa65ba5ca9de0f7ec3f33ce27e5636368715f6 WHIRLPOOL 19376692ce5e45f430cbb03f449ff64f752f7269a0c2f8417ed17a281a1fa4393ce693ebe72dd37e7c7a08268c24d123070b5bf741dadf35d58cdc82fffdfa59
+MISC ChangeLog 36766 SHA256 92a18f0ef20ecc6ec7ce1987b8ac5bfc8d3f87e8442db0a06fb13403d3b21953 SHA512 6d17101eb6b14a2ccac68e414821a727067583d9060b590e6a43717f0520abf3891492cd5e173711f4aa9ad0aa3c615318c387778e23ceb2d1311aba8e9b6252 WHIRLPOOL 02b68ef002dc737cf6b5371181ba01a2791d1e22eec9541cdaa11c3b069ca993a48d657d44eac8a8e6d95699ca17e7c20093e82145e169f47e664ce3ccc26624
 MISC metadata.xml 1039 SHA256 9e47d2b2f235d4fe429a0a17da165373892a94de4d812c92bb4efe840533b740 SHA512 3be4366060f1958481c6065d4f8c23f13b2fda2ff3664bd952942df8c5119bcae0046b5a42056096c7dfbc92a162f696e5dd0124edf4bfdef59506e5809f0468 WHIRLPOOL 95ea70041da461dd05cabb69ed30d454a35d25d39157d1c8df06ffa25f071e69809b6a68fbe2821510215989f2b528911d33b1834aa458a4f246e2eb0ec87689
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCgAGBQJRUkKKAAoJEPUd7O0j6ekAQb8H/0GOdrRJWHz8FJUwFM3hJ8xM
-RLekTwyHuPnhcglzxUdDP0XoCnUnCPbO7U6rse4xY1z23HD1Nqj29pkqpFPUc64t
-3HxQYifCzJZg1Ie91a0Qxy1Zf4RUzGz1MIjw6xd2wBR3NkwkTcaT3wrcNygCspF3
-9DvUwQbUfuAPvWLcHpEENgDH2ZdEGnCyXaQqlTiVzbeYtiM8hT4CBJjTS5+MWgOs
-peyEV3DjSfR4fxpjQAqss/5RKloZvXtUK6CsDugaFb7hDW9h260Q1wRVzgRjYuey
-mn/eDj6Cs2Efl+P8MmogW/HxLJy+skly/wPz4tokoVVsdDdXqMnpheX/u+foPxU=
-=N2Yd
+iQEcBAEBCgAGBQJRlbSIAAoJEPUd7O0j6ekAFC8IAJcdBa7QzQxJBtgJ4InF/qWq
+mNln9t14T3cjwR2r6oRF/OQiic4HtEDujtH/qnX94AiAJuUCzh1Q6Rf3IDqt5e5x
+J240mONW51wIVZDJlVSk6WyxS5+WPSLXON3LqctVp8H6C3sVTMO8LgTZhLEzmNp0
+CG/YjzDPaSwQSw89XwvsdiBNQih8GEu5wPhjLbVKkcVqwvzzS+YqPRJAARMYgF3W
+qfuHw8HVmJxwLPm01dMNQ4c4NYCNNfsMrTWiVjSuRQgTnF3IuzQUZcqaP1Ds5qNM
+DRnTE7UtuVgj+3K4S9hCNmK86hGvtIlMY/1lSWMiCDyx/P5RrBu0aMgxBBU86k0=
+=neI7
 -----END PGP SIGNATURE-----
