@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/paludis
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/paludis/ChangeLog,v 1.233 2013/03/27 00:52:45 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/paludis/ChangeLog,v 1.234 2013/05/17 04:39:35 jdhore Exp $
+
+*paludis-1.4.0 (17 May 2013)
+
+  17 May 2013; Jeff Horelick <jdhore@gentoo.org> +paludis-1.4.0.ebuild:
+  Version bump
 
   27 Mar 2013; Jeff Horelick <jdhore@gentoo.org> -paludis-0.82.0.ebuild,
   -paludis-1.0.0.ebuild:
